tests/paczka1/fuzzy1/26197773.err
Error in line 4: qND67hv A559 71,7
Error in line 18: C6NtOj S179 35,3
Error in line 29: qND67hv A,,9 31,1
